fix logo distortion

--- a/cartridges/int_pennies_SFRA/cartridge/client/default/scss/pennies.scss
+++ b/cartridges/int_pennies_SFRA/cartridge/client/default/scss/pennies.scss
@@ -13,6 +13,7 @@
     background:#fff;
     display:flex;
     justify-content: center;
+    align-items: center;
     padding:20px;
 }
 .penniesLogos .penniesCharityLogo img {
